# colosseum

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
colosseum/: CMakeLists.txt
colosseum/data/: roundRobin.bk.json  roundRobin.json
colosseum/examples/: engine_vs_engine.cpp  examples.cpp  examples.h  main.cpp
colosseum/games/: chess_match.cpp  chess_match.h  chess_tournament.cpp  chess_tournament.h  games.hpp  round_robin.cpp  round_robin.h
colosseum/notes/: high_level_design.txt  player.txt  use_cases.txt
colosseum/source/: elo_rating.cpp  elo_rating.h  elo_rating_list.cpp  elo_rating_list.h  globals.cpp  globals.h  player.cpp  player.h
colosseum/views/: no_view.cpp  no_view.h  text_view.cpp  text_view.h  view_base.cpp  view_base.h  views.hpp
examples/: engine_vs_engine.cpp  main.cpp
notes/: high_level_design.txt
